housekeeping: Don't print warning on call cancellation

https://bugzilla.gnome.org/show_bug.cgi?id=763689